sql (photo+info)

--- a/src/main/resources/templates/blog-add.html
+++ b/src/main/resources/templates/blog-add.html
@@ -9,10 +9,13 @@
 <header th:insert="blocks/header :: header"></header>
 <div class="container mt-5 mb-5">
     <h1> Добавление статьи</h1>
-    <form action="/blog/add" method="post">
+    <form action="/blog/add" method="post" id="myform" enctype="multipart/form-data">
         <input type="text" name="title" placeholder="Введите название статьи" class="form-control"><br>
         <input type="text" name="anons" placeholder="Введите анонс статьи" class="form-control"><br>
         <textarea name="full_text" placeholder="Введите полный текст статьи" class="form-control"></textarea>
+
+        <p><input type="file" name="file" id="file" value="file" multiple accept="image/*,image/jpeg"></p>
+
         <button type="submit" class="btn-success">Добавить статью</button>
     </form>
 
