sql (photo+info+audio)

--- a/src/main/resources/templates/blog-add.html
+++ b/src/main/resources/templates/blog-add.html
@@ -16,6 +16,8 @@
 
         <p><input type="file" name="file" id="file" value="file" multiple accept="image/*,image/jpeg"></p>
 
+        <input type="file" name="audio" id="capture" accept="audio/*" capture multiple />
+
         <button type="submit" class="btn-success">Добавить статью</button>
     </form>
 
